{
    "name": "CameraInputs",
    "maps": [
        {
            "name": "Default",
            "id": "ac16da1b-adfc-403d-b052-7ddc0de058dd",
            "actions": [
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "f8c48968-c311-4a18-bf10-6c0320d1683d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "c109cf08-54d1-433d-a1ef-6bbfb9c50f03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "8c76e36f-d9f1-4142-a579-2105e981a86f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af06a95e-7668-42e5-8f5d-bdef8f1ba0fb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e91e0996-4302-40a9-b5ca-87e8f738aea4",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d61e9667-285b-4b7b-a771-097419c2314a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}